--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,10 @@ build-backend = "setuptools.build_meta"
 # ==============================================================================
 [project]
 name = "pymfoil"
-version = "0.1.0"
 authors = [
-  { name="Your Name", email="your.email@example.com" },
+  {name = "N. Papadakis", email = "npapnet@gmail.com"},
 ]
-description = "A Python package for aerodynamic airfoil analysis."
+description = "A Python package for aerodynamic airfoil analysis based on mfoil."
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text="MIT License" }
@@ -54,9 +53,11 @@ dependencies = [
 
 # URLs that are displayed on your project's PyPI page.
 [project.urls]
-Homepage = "https://github.com/your-username/pymfoil"
-"Bug Tracker" = "https://github.com/your-username/pymfoil/issues"
-Repository = "https://github.com/your-username/pymfoil"
+Homepage = "https://github.com/npapnet/pymfoil"
+"Bug Tracker" = "https://github.com/npapnet/pymfoil/issues"
+Repository = "https://github.com/npapnet/pymfoil"
+Documentation = "https://npapnet.github.io/pymfoil/"
+Source = "https://github.com/npapnet/pymfoil"
 
 
 # ==============================================================================
@@ -67,16 +68,22 @@ Repository = "https://github.com/your-username/pymfoil"
 # They can be installed using `pip install .[dev]` or `pip install pymfoil[test]`.
 # ==============================================================================
 [project.optional-dependencies]
-dev = [
-    "pytest",        # For running tests
-    "ruff",          # High-performance linter and formatter
-    "mypy",          # For static type checking
-    "black",         # Opinionated code formatter (can be replaced by ruff format)
-]
+# dev = [
+#     "pytest",        # For running tests
+#     "ruff",          # High-performance linter and formatter
+#     "mypy",          # For static type checking
+#     "black",         # Opinionated code formatter (can be replaced by ruff format)
+# ]
 docs = [
     "sphinx",
     "sphinx-rtd-theme",
 ]
+test = ["pytest"]
+
+# Entry points are scripts that can be run from the command line.
+[project.scripts]
+# pymfoil_gui = "pymfoil.__main__:main"
+#  WORK IN progress
 
 
 # ==============================================================================
@@ -94,22 +101,22 @@ docs = [
 packages = { find = {} }
 
 
-# --- Ruff Linter/Formatter Configuration ---
-# Ruff is an extremely fast Python linter and code formatter, written in Rust.
-[tool.ruff]
-line-length = 88
-target-version = "py38"
+# # --- Ruff Linter/Formatter Configuration ---
+# # Ruff is an extremely fast Python linter and code formatter, written in Rust.
+# [tool.ruff]
+# line-length = 88
+# target-version = "py38"
 
-[tool.ruff.lint]
-# See https://docs.astral.sh/ruff/rules/ for all rules
-select = [
-    "E",  # pycodestyle errors
-    "F",  # pyflakes
-    "W",  # pycodestyle warnings
-    "I",  # isort (import sorting)
-    "UP", # pyupgrade
-]
-ignore = []
+# [tool.ruff.lint]
+# # See https://docs.astral.sh/ruff/rules/ for all rules
+# select = [
+#     "E",  # pycodestyle errors
+#     "F",  # pyflakes
+#     "W",  # pycodestyle warnings
+#     "I",  # isort (import sorting)
+#     "UP", # pyupgrade
+# ]
+# ignore = []
 
 
 # --- Pytest Configuration ---
@@ -122,8 +129,13 @@ testpaths = [
 ]
 
 
-# --- Mypy (Static Type Checker) Configuration ---
-[tool.mypy]
-python_version = "3.8"
-warn_return_any = true
-warn_unused_configs = true
+# # --- Mypy (Static Type Checker) Configuration ---
+# [tool.mypy]
+# python_version = "3.8"
+# warn_return_any = true
+# warn_unused_configs = true
+
+
+
+[tool.setuptools.dynamic]
+version = {attr = "pymfoil.__version__"}
