--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main  # Replace with your default branch if it's not 'main'
-      # - develop 
+      - develop 
 
 jobs:
   build-and-deploy:
